# yappod2

./: .clang-format  .gitignore  AGENTS.md  CMakeLists.txt  INSTALL  Makefile.in  README.md  aclocal.m4  config.example.toml  config.h.in  configure
.github/workflows/: ci.yml
cmake/: Dependencies.cmake  FindLibevent.cmake  Findcmocka.cmake
doc/: index-validation.md
docs/: README.md  bm25_ranking.md  canonical_ingest.md  command-reference.md  compaction_recovery.md  configuration.md  core_protocol_v2.md  dependency_management.md  development.md  embedding_provider.md  hybrid_reranking.md  index-format.md  index-lifecycle.md  index_segment_sizing.md  index_v2_contract.md  indexing.md  manifest_nrt.md  modern_search_completion_contract.md  observability.md  operations.md  operations_release.md  operations_runbook_v2.md  quality_performance_reliability_v2.md  query_orchestration.md  rag_passage_retrieval.md  rag_retrieval.md  runtime_limits_security.md  search.md  search_json_api.md  search_rag_http_v2.md  tokenizer_architecture.md  vector_search_backend.md  yappod-core-protocol.md  yappod-front-api.md
examples/: README.md  config.lexical.toml  config.toml  documents.lexical.ndjson  documents.ndjson  troubleshooting.md
examples/local-files/: README.md  config.hybrid.toml  config.lexical.toml  local-files-yappod2.toml  local-files.toml  local_files.py  requirements-core.txt  requirements.txt
examples/local-files/docs/: configuration.md  pipeline-and-recovery.md
examples/local-files/plugins/sample-local-format/: pyproject.toml
examples/local-files/plugins/sample-local-format/src/yappod2_sample_local_format/: __init__.py
examples/local-files/tests/: test_local_files.py
examples/search-web/: .gitignore  README.md  config.example.toml  package-lock.json  package.json  vitest.config.ts
examples/search-web/client/: index.html
examples/search-web/client/src/: App.test.tsx  App.tsx  RagView.tsx  api.ts
examples/search-web/docs/: llm-integration.md  ux-design.md
examples/search-web/scripts/: mock-llm.mjs  shared-config.mjs  stack.mjs  stack.test.mjs  start.sh  stop.sh
examples/search-web/server/src/: app.ts  config.ts  embedding-client.ts  index.ts  llm-client.ts  types.ts  usage-log.ts  user-error.ts  yappod-client.ts
examples/search-web/server/test/: app.test.ts  config.test.ts  llm-client.test.ts  rag.test.ts  usage-log.test.ts  user-error.test.ts
examples/search-web/tests/: e2e.mjs  e2e.sh
examples/search-web/tests/fixtures/: documents.vector.ndjson
examples/wikipedia-search/: .gitignore  README.md  config.toml  config.vector.toml  wikipedia-search.example.toml  wikipedia_data.py
examples/wikipedia-search/docs/: ux-design.md  vector-search.md
examples/wikipedia-search/scripts/: build_index.sh  smoke.sh  start_daemons.sh  start_demo.sh  stop_daemons.sh  stop_demo.sh
examples/wikipedia-search/tests/: e2e.mjs  e2e.sh  test_wikipedia_data.py
examples/wikipedia-search/tests/fixtures/: api-response.json  config.vector.toml  documents.vector.ndjson  wikiextractor.jsonl
examples/wikipedia-search/web/: .gitignore  config.example.toml  package-lock.json  package.json  vite.config.ts
examples/wikipedia-search/web/client/: index.html
examples/wikipedia-search/web/scripts/: mock-llm.mjs
src/: Makefile.in  search.c  yappo_alloc.c  yappo_alloc.h  yappo_ann_v2.c  yappo_ann_v2.h  yappo_application_config.c  yappo_application_config.h  yappo_bm25.c  yappo_bm25.h  yappo_build_v2.c  yappo_build_v2.h  yappo_compact.c  yappo_compact_v2.c  yappo_compact_v2.h  yappo_config_v2.c  yappo_config_v2.h  yappo_core_http_v2.c  yappo_core_http_v2.h  yappo_core_protocol_v2.c  yappo_core_protocol_v2.h  yappo_db.c  yappo_db.h  yappo_embedding.c  yappo_embedding.h  yappo_filter_v2.c  yappo_filter_v2.h  yappo_http_v2.c  yappo_http_v2.h  yappo_hybrid.c  yappo_hybrid.h  yappo_index.c  yappo_index.h  yappo_index_deletefile.c  yappo_index_deletefile.h  yappo_index_filedata.c  yappo_index_filedata.h  yappo_index_pos.c  yappo_index_pos.h  yappo_index_v2.c  (+63 more)
tests/: ann_v2_test.c  application_config_test.c  bm25_score_test.c  canonical_ingest_test.c  config_v2_test.c  core_http_v2_test.c  core_protocol_v2_test.c  dependency_smoke_test.c  e2e.sh  embedding_provider_test.c  error_cases.sh  filedata_decode_bounds_test.c  front_http_error_cases.sh  http_v2_runtime_test.c  hybrid_rerank_test.c  index_v2_contracts_test.c  index_varint_decode_test.c  install_config_smoke.cmake  lexical_v2_ranking_test.c  lexical_v2_reader_test.c  lexical_v2_writer_test.c  makeindex_input_error_cases.sh  manifest_v2_nrt_test.c  mergepos_error_cases.sh  metadata_filter_snippet_v2_test.c  observability_v2_test.c  opendir_error_cases.sh  pos_index_bounds_test.c  query_v2_test.c  rag_passage_test.c  relative_index_dir_cases.sh  retrieve_v2_test.c  runtime_policy_v2_test.c  search_api_test.c  search_deletefile_bounds_test.c  search_deletefile_concurrency_test.c  seek_offset_overflow_test.c  segment_planner_v2_test.c  segment_v2_roundtrip_test.c  snapshot_v2_test.c  (+6 more)
tests/cmocka/: MIGRATION_MATRIX.md
tests/cmocka/common/: test_cli.c  test_cli.h  test_db_tmpfiles.c  test_db_tmpfiles.h  test_env.c  test_env.h  test_fs.c  test_fs.h  test_http.c  test_http.h  test_index.c  test_index.h  test_input_builder.c  test_input_builder.h  test_mutation.c  test_mutation.h  test_proc.c  test_proc.h  test_yappod.c  test_yappod.h
tests/cmocka/suites/: daemon_port_option_cases_test.c  e2e_test.c  error_cases_test.c  front_http_error_cases_test.c  http_v2_daemon_test.c  makeindex_input_error_cases_test.c  mergepos_error_cases_test.c  opendir_error_cases_test.c  relative_index_dir_cases_test.c
tests/fixtures/: index.txt  index_malformed.txt
tests/fuzz/: core_http_v2_fuzz.c  core_protocol_v2_fuzz.c  ingest_v2_fuzz.c
tests/quality/: README.md  baseline.tsv  qrels.tsv  queries.tsv  search_quality.c  search_quality_metrics.c  search_quality_metrics.h  search_quality_metrics_test.c  v2_daemon_reliability_test.c  v2_load_probe.c  v2_quality_fixture.c  v2_quality_fixture.h  v2_search_quality_test.c
(+27 files in other folders)
